--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <link rel="stylesheet" href="script.js">
+    <script src="script.js"></script>
 </body>
 </html>
